Mon Sep 20  9:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Patch from cls@seawood.org -
	* GNUstep.sh.in: avoid multiple GNUstep entries in path
	* GNUstep.csh.in: avoid multiple GNUstep entries in path

Sun Sep 19  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* bundle.make (internal-bundle-distclean): Added
	$(BUNDLE_DIR_NAME) so that the bundle is removed on distclean.

Fri Sep 17  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (distclean): added test, so that distclean invokes
	clean only in the top dir.  This avoids having 'make clean'
	executed uselessly a lot of times in subdirs.

1999-09-14  Adam Fedor  <fedor@gnu.org>

	* common.make, config.make.in: Remove -o from LDFLAGS.
	* application.make, bundle.make, ctool.make, objc.make,
	service.make, target.make, test-library.make, tool.make: Add -o
	in LD command.

1999-09-11  Adam Fedor  <fedor@gnu.org>

	* target.make: Remove two erronous newlines in the MacOSX section.

1999-09-07  Adam Fedor  <fedor@gnu.org>

	* Version: 0.6.0

	* GNUstep.csh.in: Don't set GNUSTEP_HOST if already set.
	* GNUstep.sh.in: Likewise.

	* configure.in: Add test for solaris libraries

	* target.make: Use -lposix for Solaris (regardless of threaded).

1999-09-07  David Lazaro Saz  <khelekir@encomix.es>

	* configure.in: Added threading support for FreeBSD.
	* target.make: Likewise.
 
1999-08-15  Adam Fedor  <fedor@gnu.org>

	* subproject.make (internal-subproj-all): Make sure files from
	subprojects of subprojects get linked. (Patch from Pedro Ivo 
	Andrade Tavares <ptavares@iname.com>).

	* target.make: Add partial OSF support.

1999-08-09  Adam Fedor  <fedor@gnu.org>

	* GNUstep.csh.in: Fix the setting of GNUSTEP_MAKEFILES (patch
	from Christopher Seawood <cls@seawood.org>).

	* target.make: Change freebsd3 to freebsd to find all versions,
	except put freebsd2 first so it is still unique.

1999-08-09  Richard Frith-Macdonald <richard@brainstorm.co.uk>
